--- a/assets/styles/calculadora.css
+++ b/assets/styles/calculadora.css
@@ -1,36 +1,70 @@
-body{
-    background-color: aqua;
+:root{
+    --gray:gray;
+    --black:black;
+    --white:white;
+    --gray2:#333333;
+    --gray3:#a5a5a5;
+    --yellow:#ee9d1e;
+    /* --:; */
 }
+
+
+
+div.container-full{
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+}
+
 div.container{
-    width: 525px;
+    border-radius: 50px;
+    max-width: 100%;
+    width: 800px;
+    height: auto;
+    background-color: var(--gray);
+    padding: 40px 50px;
+}
+
+div.calculadora{
+    border-radius: 50px;
+    max-width: 100%;
+    width: 700px;
+    height: auto;
+    background-color: var(--black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.cal-result{
+    width: 100%;
+    height: auto;
+    background-color: var(--black);
+    color: var(--white);
+    font-size: 100px;
+    text-align: right;
     margin-top: 200px;
 }
-div.card{
-    border: none;
-    background-color: black;
-    border-radius: 20px;
-}
-div.card.corpo-cal{
-    height: 500px;
-    text-align: center;
-    justify-content: space-around;
-    align-items: center;
-}
-div.card.pesquisa{
-    width: 475px;
-    height: auto;
-    border: 1px solid black;
+
+.row{
+    padding: 20px;
 }
 
-input{
-    height: 75px;
+.btn{
     font-size: 50px;
-    border-radius: 45px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-top: 20px;
+    background-color: var(--gray2);
+    color: var(--white);
 }
-
-button.btn{
-    width: 100px;
-    margin: 10px 10px;
-    height: 50px;
-    font-size: 25px;
+.btn-yellow{
+    background-color: var(--yellow);
+}
+.btn-gray3{
+    background-color: var(--gray3);
+    color: var(--black);
 }
